Update closePopup function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button class="button clear" id="easyButton" onclick="selectDifficulty('easy')">Easy</button>
           <button class="button" id="mediumButton" onclick="selectDifficulty('medium')">Medium</button>
           <button class="button" id="hardButton" onclick="selectDifficulty('hard')">Hard</button>
-          <a class="btnok" onclick="closePopup()">OK!</a>
+          <a class="btnok" onclick="closePopup(); reset()">OK!</a>
         </div>
     </div>
     <button class="settingsButton reset hidden" id="settings" onclick="openSettings()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 12">
